--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="유튜브 API를 이용하여 나만의 사이트를 만드는 튜토리얼입니다."/>
+    <meta name="description" content="포트폴리오, 리액트, react, react.js"/>
     <meta name="keyword" content="포트폴리오, 리액트, react, react.js" />
     <link rel="icon" type="image/svg+xml" href="favicon.svg" />
     <title>김봄 포트폴리오</title>
